--- a/N14/.classpath
+++ b/N14/.classpath
@@ -6,5 +6,19 @@
 	<classpathentry kind="lib" path="librerias/jxl.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="librerias/ant-javafx.jar"/>
+	<classpathentry kind="lib" path="librerias/deploy.jar"/>
+	<classpathentry kind="lib" path="librerias/javafx-doclet.jar"/>
+	<classpathentry kind="lib" path="librerias/javafx-mx.jar"/>
+	<classpathentry kind="lib" path="librerias/javaws.jar"/>
+	<classpathentry kind="lib" path="librerias/javax.mail.jar"/>
+	<classpathentry kind="lib" path="librerias/jfxrt.jar"/>
+	<classpathentry kind="lib" path="librerias/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+	<classpathentry kind="lib" path="librerias/plugin.jar"/>
+	<classpathentry kind="lib" path="librerias/twitter4j-core-3.0.5.jar"/>
+	<classpathentry kind="lib" path="librerias/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="librerias/jfreechart-1.0.19-experimental.jar"/>
+	<classpathentry kind="lib" path="librerias/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="librerias/jcommon-1.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
